Adjusts spacing on chi section and fixes subscribe form

--- a/src/components/ContattaciForm/contattaciform.module.css
+++ b/src/components/ContattaciForm/contattaciform.module.css
@@ -9,7 +9,8 @@
 }
 
 .scrittacent {
-  align-self: center;
+  margin-top: 1%;
+  align-self: flex-start;
 }
 
 .formstyle {
@@ -24,7 +25,7 @@
   border-radius: 5px;
   border: 2px solid #BFE1EC;
   padding: 1%;
-  width: 70%;
+  width: 80%;
   color: #0081C2;
 }
 
@@ -36,7 +37,7 @@
   padding-bottom: 4%;
   padding-top: 1%;
   padding-left: 1%;
-  width: 70%;
+  width: 80%;
   color: #0081C2;
 }
 
