--- a/src/components/SezioneChi/sezionechi.module.css
+++ b/src/components/SezioneChi/sezionechi.module.css
@@ -1,4 +1,5 @@
 .backgroundblue {
+  margin-top: 8%;
   background-color: rgb(67, 182, 231);
 }
 
